# image-compressor

./: .gitignore  LICENSE  README.md  main copy.py  main.py  pyproject.toml
services/: image_handler.py  watcher.py
utils/: logger.py
